; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/hv/extr_ring_buffer.c_hv_ringbuffer_peek.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/hv/extr_ring_buffer.c_hv_ringbuffer_peek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hv_ring_buffer_info = type { i32 }

@EAGAIN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hv_ringbuffer_peek(%struct.hv_ring_buffer_info* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.hv_ring_buffer_info*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.hv_ring_buffer_info* %0, %struct.hv_ring_buffer_info** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 0, i64* %10, align 8
  %12 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %13 = getelementptr inbounds %struct.hv_ring_buffer_info, %struct.hv_ring_buffer_info* %12, i32 0, i32 0
  %14 = load i64, i64* %11, align 8
  %15 = call i32 @spin_lock_irqsave(i32* %13, i64 %14)
  %16 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %17 = call i32 @hv_get_ringbuffer_availbytes(%struct.hv_ring_buffer_info* %16, i64* %9, i64* %8)
  %18 = load i64, i64* %9, align 8
  %19 = load i64, i64* %7, align 8
  %20 = icmp slt i64 %18, %19
  br i1 %20, label %21, label %28

21:                                               ; preds = %3
  %22 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %23 = getelementptr inbounds %struct.hv_ring_buffer_info, %struct.hv_ring_buffer_info* %22, i32 0, i32 0
  %24 = load i64, i64* %11, align 8
  %25 = call i32 @spin_unlock_irqrestore(i32* %23, i64 %24)
  %26 = load i32, i32* @EAGAIN, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %4, align 4
  br label %40

28:                                               ; preds = %3
  %29 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %30 = call i64 @hv_get_next_read_location(%struct.hv_ring_buffer_info* %29)
  store i64 %30, i64* %10, align 8
  %31 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = load i64, i64* %7, align 8
  %34 = load i64, i64* %10, align 8
  %35 = call i64 @hv_copyfrom_ringbuffer(%struct.hv_ring_buffer_info* %31, i8* %32, i64 %33, i64 %34)
  store i64 %35, i64* %10, align 8
  %36 = load %struct.hv_ring_buffer_info*, %struct.hv_ring_buffer_info** %5, align 8
  %37 = getelementptr inbounds %struct.hv_ring_buffer_info, %struct.hv_ring_buffer_info* %36, i32 0, i32 0
  %38 = load i64, i64* %11, align 8
  %39 = call i32 @spin_unlock_irqrestore(i32* %37, i64 %38)
  store i32 0, i32* %4, align 4
  br label %40

40:                                               ; preds = %28, %21
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32 @hv_get_ringbuffer_availbytes(%struct.hv_ring_buffer_info*, i64*, i64*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i64 @hv_get_next_read_location(%struct.hv_ring_buffer_info*) #1

declare dso_local i64 @hv_copyfrom_ringbuffer(%struct.hv_ring_buffer_info*, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
